--- a/rust_test/Cargo.toml
+++ b/rust_test/Cargo.toml
@@ -9,9 +9,10 @@ publish = false
 [dependencies]
 tide = "0.16.0"
 async-std = { version = "1.9.0", features = ["attributes"] }
-sqlx = { version = "0.5.5", features = ["sqlite", "chrono"] }
+sqlx = { version = "0.3.5", features = ["sqlite", "chrono"] }
 askama = { version = "0.10.5", features = ["with-tide"] }
-serde = "1.0.127"
+serde = "1.0.125"
 serde_urlencoded = "0.7.0"
+serde_json = "1.0.66"
 askama_tide = "0.13.0"
-async-sqlx-session = { version = "0.4.0", features = ["sqlite"] }
+async-sqlx-session = { version = "0.2.1", features = ["sqlite"] }
